# platelet-risk-assessment

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: requirements.txt  run.py
app/config/: config_live_prediction.yaml  config_training.yaml  constants.yaml  sam_sweep.yaml  scalers.pkl  sweep_dl.yaml  sweep_rf.yaml
app/config/model_heart_thorax/: config.yaml  keras_metadata.pb  saved_model.pb
app/config/model_heart_thorax/rf/: base_config.yaml  base_model.pkl
app/config/model_heart_thorax/variables/: variables.data-00000-of-00001  variables.index
app/config/model_hematooncology/: config.yaml  keras_metadata.pb  saved_model.pb
app/config/model_hematooncology/rf/: base_config.yaml
app/config/model_hematooncology/variables/: variables.index
app/config/model_none/: config.yaml  keras_metadata.pb  saved_model.pb
app/config/model_none/rf/: base_config.yaml
app/config/model_none/variables/: variables.data-00000-of-00001  variables.index
app/data_handling/: create_sliding_window.py  get_training_data.py
app/fhir_extraction/: cache_builder.py  extract_transform_validate.py
app/ml/: custom_SAM.py  explain_train.py  explain_train_nn_lime.py  live_predict.py  public_helper.py  train.py  train_helper.py  train_nn.py
